--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<h2>Title:</h2>
+<label><%= @book.title %></label>
+
+<h2>Body</h2>
+<label><%= @book.body %></label>
