--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,39 +1,46 @@
-<h1>Books</h1>
-<table>
- <thead>
-  <tr>
-   <th>Title</th>
-   <th>Body</th>
-  </tr>
- </thead>
+ <body>
+  <h1>Books</h1>
+  <table>
+   <thead>
+    <tr>
+     <th>Title</th>
+     <th>Body</th>
+    </tr>
+   </thead>
 
- <tboby>
-  <% @books.each do |book| %>
-   <tr>
-    <td><%= book.title %></td>
-    <td><%= book.body %></td>
-    <td><%= link_to "show", book_path(book.id) %></td>
-    <td><%= link_to "edit", edit_book_path(book.id) %></td>
-    <td><%= link_to "destroy", book_path(book.id), method: :delete %></td>
-   </tr>
-  <% end %>
- </tboby>
-</table>
+   <tboby>
+    <% @books.each do |book| %>
+     <tr>
+      <td><%= book.title %></td>
+      <td><%= book.body %></td>
+      <td><%= link_to "Show", book_path(book.id) %></td>
+      <td><%= link_to "Edit", edit_book_path(book.id) %></td>
+      <td><%= link_to "Destroy", book_path(book.id), method: :delete %></td>
+     </tr>
+    <% end %>
+   </tboby>
+  </table>
 
 
-<h2>New book</h2>
-<div class = new_book>
- <%= form_with model: @book, url: '/books', path: :post  do |f| %>
-  <div class = new_book_title>
-   <label>Title</label>
-   <%= f.text_field :title %>
-  </div>
-  <div = class =new_book_body>
-   <label>Body</label>
-   <%= f.text_area :body %>
-  </div>
-  </div class = action>
-   <%= f.submit 'Create Book' %>
-  </div>
- <% end %>
-</div>
+  <h2>New book</h2>
+  <div class = "new_book">
+   <%= form_with model: @book, url: '/books', path: :post  do |f| %>
+    <div class ="new_book_block">
+     <label class = "new_book_title_label">Title</label>
+     <div class = "new_book_title">
+      <%= f.text_field :title %>
+     </div>
+    </div>
+    <div class ="new_book_block">
+     <label class ="new_book_label">Body</label>
+     <div class ="new_book_body">
+      <%= f.text_area :body %>
+     </div>
+    </div>
+    <div class = "action">
+     <%= f.submit 'Create Book' %>
+    </div>
+    </div>
+   <% end %>
+
+ </body>
