--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,9 +1,6 @@
-<h2>Title:</h2>
-<label><%= @book.title %></label>
+<p><strong>Title:</strong><%= @book.title %></p>
+<p><strong>Body:</strong><%= @book.body %></p>
 
-<h2>Body</h2>
-<label><%= @book.body %></label>
-
-<%= link_to "edit", edit_book_path(@book.id) %>
-<a href ="/books">back</a>
-<!--< %= link_to("back", "/books") %>-->
+<%= link_to "Edit", edit_book_path(@book.id) %>
+|
+<a href ="/books">Back</a>
