--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,14 +1,22 @@
 
 <h1>Editing Book</h1>
 <%= form_with model: @book, url: book_path(@book.id), method: :patch do |f| %>
+  <div class ="form_box">
+   <label>Title</label>
+   <div>
+    <%= f.text_field :title %>
+   </div>
+  </div>
 
-  <h4>Title</h4>
-  <%= f.text_field :title %>
-
-  <h4>Body</h4>
-  <%= f.text_area :body %>
-
-  <%= f.submit 'Update book' %>
+  <div class ="form_box">
+   <label>Body</label>
+   <div>
+    <%= f.text_area :body %>
+   </div>
+  </div>
+  <div class = "action">
+   <%= f.submit 'Update book' %>
+  </div>
 <% end %>
 
 <%= link_to "show", book_path(@book.id) %>
