--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -25,22 +25,22 @@
   <h2>New book</h2>
   <div class = "new_book">
    <%= form_with model: @book, url: '/books', path: :post  do |f| %>
-    <div class ="new_book_block">
-     <label class = "new_book_title_label">Title</label>
-     <div class = "new_book_title">
+    <div class ="form_box">
+     <label>Title</label>
+     <div>
       <%= f.text_field :title %>
      </div>
     </div>
-    <div class ="new_book_block">
-     <label class ="new_book_label">Body</label>
-     <div class ="new_book_body">
+    <div class ="form_box">
+     <label>Body</label>
+     <div>
       <%= f.text_area :body %>
      </div>
     </div>
     <div class = "action">
      <%= f.submit 'Create Book' %>
     </div>
-    </div>
    <% end %>
+  </div>
 
  </body>
