--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,15 @@
-
 <h1>Editing Book</h1>
+ <div class ="errors_box">
+  <% if @book.errors.any? %>
+   <h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
+   <ul>
+    <%= @book.errors.full_messages.each do |message| %>
+     <li><%= message %></li>
+    <% end %>
+   </ul>
+  <% end %>
+ </div>
+
 <%= form_with model: @book, url: book_path(@book.id), method: :patch do |f| %>
   <div class ="form_box">
    <label>Title</label>
