--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,6 @@
+ <div class ="flash">
+  <%= flash[:notice] %>
+</div>
  <body>
   <h1>Books</h1>
   <table>
@@ -15,7 +18,7 @@
       <td><%= book.body %></td>
       <td><%= link_to "Show", book_path(book.id) %></td>
       <td><%= link_to "Edit", edit_book_path(book.id) %></td>
-      <td><%= link_to "Destroy", book_path(book.id), method: :delete %></td>
+      <td><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure？" %></td>
      </tr>
     <% end %>
    </tboby>
@@ -23,6 +26,17 @@
 
 
   <h2>New book</h2>
+ <div class = "errors_box"> 
+  <% if @book.errors.any? %>
+   <h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
+   <ul>
+    <%= @book.errors.full_messages.each do |message| %>
+     <li><%= message %></li>
+    <% end %>
+   </ul>
+  <% end %>
+ </div>
+
   <div class = "new_book">
    <%= form_with model: @book, url: '/books', path: :post  do |f| %>
     <div class ="form_box">
