--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -3,7 +3,7 @@
   <% if @book.errors.any? %>
    <h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
    <ul>
-    <%= @book.errors.full_messages.each do |message| %>
+    <% @book.errors.full_messages.each do |message| %>
      <li><%= message %></li>
     <% end %>
    </ul>
