--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -25,7 +25,7 @@
    </div>
   </div>
   <div class = "action">
-   <%= f.submit 'Update book' %>
+   <%= f.submit 'Update Book' %>
   </div>
 <% end %>
 
